changed social media icon

--- a/index.html
+++ b/index.html
@@ -76,20 +76,20 @@
                     <div class="span10 offset1">
                         <div class="flexslider">
                             <ul class="slides">
-                                <li data-thumb="assets/img/slider/slide1.jpg">
-                                    <img src="assets/img/slider/slide1.jpg">
+                                <li data-thumb="assets/img/slider/hamsa_and_female_portrait.jpg">
+                                    <img src="assets/img/slider/hamsa_and_female_portrait.jpg">
                                     <p class="flex-caption">Hamsa and Female Portrait</p>
                                 </li>
-                                <li data-thumb="assets/img/slider/slide2.jpg">
-                                    <img src="assets/img/slider/slide2.jpg">
-                                    <p class="flex-caption">Plaster Study Female Head and Figure Study</p>
+                                <li data-thumb="assets/img/slider/figure_study_and_plaster_study_female_head.jpg">
+                                    <img src="assets/img/slider/figure_study_and_plaster_study_female_head.jpg">
+                                    <p class="flex-caption">Figure Study and Plaster Study Female Head</p>
                                 </li>
-                                <li data-thumb="assets/img/slider/slide3.jpg">
-                                    <img src="assets/img/slider/slide3.jpg">
+                                <li data-thumb="assets/img/slider/with_a_wimper_and_clasmate_study.jpg">
+                                    <img src="assets/img/slider/with_a_wimper_and_clasmate_study.jpg">
                                     <p class="flex-caption">With a Wimper and Classmate Study</p>
                                 </li>
-                                <li data-thumb="assets/img/slider/slide4.jpg">
-                                    <img src="assets/img/slider/slide4.jpg">
+                                <li data-thumb="assets/img/slider/impressionist_women_and_medusa_study.jpg">
+                                    <img src="assets/img/slider/impressionist_women_and_medusa_study.jpg">
                                     <p class="flex-caption">Impressionist Women and Medusa Study</p>
                                 </li>
                             </ul>
@@ -112,7 +112,7 @@
             </div>
             <div class="row">
                 <div class="work span3">
-                    <img src="assets/img/portfolio/thumbs/nude_figure_study_oil_on_paper300.png" alt="Nude figure study oil on paper">
+                    <img src="assets/img/portfolio/thumbs/nude_figure_study_oil_on_paper300.png" alt="Figure Study">
                     <h4>Oil on Paper</h4>
                     <p>Figure Study</p>
                     <div class="icon-awesome">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="work span3">
-                    <img src="assets/img/portfolio/thumbs/dark-hair-300.jpg" alt="">
+                    <img src="assets/img/portfolio/thumbs/dark-hair-300.jpg" alt="Female Portrait">
                     <h4>Oil on Panel</h4>
                     <p>Female Portrait</p>
                     <div class="icon-awesome">
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="work span3">
-                    <img src="assets/img/portfolio/thumbs/female_head300.jpg" alt="">
+                    <img src="assets/img/portfolio/thumbs/female_head300.jpg" alt="Plaster Plate Study">
                     <h4>Graphite on Paper</h4>
                     <p>Plaster Plate Study</p>
                     <div class="icon-awesome">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="work span3">
-                    <img src="assets/img/portfolio/thumbs/medusa_study_300.jpg" alt="">
+                    <img src="assets/img/portfolio/thumbs/medusa_study_300.jpg" alt="Medusa Study">
                     <h4>Graphite on Paper</h4>
                     <p>Medusa Study</p>
                     <div class="icon-awesome">
@@ -163,7 +163,6 @@
                         <h4>Contact Singh</h4>
                         <p><i class="icon-map-marker"></i> Los Angeles, California, US</p>
                         <p><i class="icon-envelope-alt"></i>Email: <a href="mailto:singh.enso@gmail.com">singh.enso@gmail.com</a></p>
-                        <p><i class="icon-camera-retro"></i> Instagram: <a href="http://instagram.com/singh_gallery">instagram.com/singh_gallery</a></p>
                     </div>
                 </div>
                 <div class="footer-border"></div>
@@ -173,6 +172,7 @@
                     </div>
                     <div class="social span8">
                         <a class="facebook" href="https://www.facebook.com/singh.enso"></a>
+                        <a class="instagram" href="http://instagram.com/singh_gallery"></a>
                     </div>
                 </div>
             </div>
