--- a/portfolio.html
+++ b/portfolio.html
@@ -101,16 +101,16 @@
                     <li data-id="p-1" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/nude_figure_study_oil_on_paper.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/nude_figure_study_oil_on_paper300.png" alt="">
+                                <img src="assets/img/portfolio/thumbs/nude_figure_study_oil_on_paper300.png" alt="Figure Study">
                             </a>
                             <h4>Oil on paper</h4>
-                            <p>Figure study</p>
+                            <p>Figure Study</p>
                         </div>
                     </li>
-                    <li data-id="p-2" data-type="oil" class="span3">
+                    <li data-id="p-female-portrait" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/dark-hair-555.jpg" rel="prettyPhoto" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/dark-hair-300.jpg" rel="prettyPhoto" alt="">
+                                <img src="assets/img/portfolio/thumbs/dark-hair-300.jpg" rel="prettyPhoto" alt="Female Portrait">
                             </a>
                             <h4>Oil on panel</h4>
                             <p>Female Portrait</p>
@@ -119,16 +119,16 @@
                     <li data-id="p-3" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/female_head500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/female_head300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/female_head300.jpg" alt="Plaster Study Female Head">
                             </a>
                             <h4>Graphite on Paper</h4>
-                            <p>Plaster study Female head</p>
+                            <p>Plaster Study Female Head</p>
                         </div>
                     </li>
                     <li data-id="p-4" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/medusa_study_500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/medusa_study_300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/medusa_study_300.jpg" alt="Medusa Study">
                             </a>
                             <h4>Graphite on Paper</h4>
                             <p>Medusa Study</p>
@@ -137,16 +137,16 @@
                     <li data-id="p-5" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/with_a_wimper.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/with_a_wimper_300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/with_a_wimper_300.jpg" alt="With a Wimper">
                             </a>
                             <h4>Graphite on Paper</h4>
-                            <p>With a wimper</p>
+                            <p>With a Wimper</p>
                         </div>
                     </li>
                     <li data-id="p-6" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/grandfather500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/grandfather.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/grandfather.jpg" alt="Artist's GrandFather">
                             </a>
                             <h4>Charcoal on Paper</h4>
                             <p>Artist's GrandFather</p>
@@ -155,16 +155,16 @@
                     <li data-id="p-7" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/male_head400.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/male_head.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/male_head.jpg" alt="Plaster Study Male Head">
                             </a>
                             <h4>Graphite on Paper</h4>
-                            <p>Plaster study Male Head</p>
+                            <p>Plaster Study Male Head</p>
                         </div>
                     </li>
                     <li data-id="p-8" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/torso450.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/torso300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/torso300.jpg" alt="Plaster Study Torso">
                             </a>
                             <h4>Graphite on Paper</h4>
                             <p>Plaster Study Torso</p>
@@ -173,16 +173,16 @@
                     <li data-id="p-9" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/classmate_study500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/classmate_study.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/classmate_study.jpg" alt="Classmate Study">
                             </a>
                             <h4>Oil on Paper</h4>
-                            <p>Classmate study</p>
+                            <p>Classmate Study</p>
                         </div>
                     </li>
                     <li data-id="p-10" data-type="sketches" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/bobmarley500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/bobmarley300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/bobmarley300.jpg" alt="Bob Marley">
                             </a>
                             <h4>Sketch</h4>
                             <p>Bob Marley</p>
@@ -191,7 +191,7 @@
                     <li data-id="p-11" data-type="sketches" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/budda550.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/budda300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/budda300.jpg" alt="Budda">
                             </a>
                             <h4>Sketch</h4>
                             <p>Budda</p>
@@ -200,7 +200,7 @@
                     <li data-id="p-12" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/butterfly.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/butterfly300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/butterfly300.jpg" alt="Butterfly">
                             </a>
                             <h4>Painting</h4>
                             <p>Butterfly</p>
@@ -209,16 +209,16 @@
                     <li data-id="p-13" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/comission470.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/commision300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/commision300.jpg" alt="Commissioned work">
                             </a>
                             <h4>Painting</h4>
-                            <p>Commissioned work</p>
+                            <p>Commissioned Work</p>
                         </div>
                     </li>
                     <li data-id="p-14" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/bleedingheart.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/bleedingheart-300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/bleedingheart-300.jpg" alt="Bleeding Hearth">
                             </a>
                             <h4>Painting</h4>
                             <p>Bleeding Hearth</p>
@@ -227,7 +227,7 @@
                     <li data-id="p-15" data-type="sketches" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/hamsa500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/hamsa300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/hamsa300.jpg" alt="Hamsa">
                             </a>
                             <h4>Sketch</h4>
                             <p>Hamsa</p>
@@ -236,7 +236,7 @@
                     <li data-id="p-16" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/hummingbird500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/hummingbird300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/hummingbird300.jpg" alt="Humming Bird">
                             </a>
                             <h4>Painting</h4>
                             <p>Humming Bird</p>
@@ -245,7 +245,7 @@
                     <li data-id="p-17" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/impressionistwomen800.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/impressionistwomen300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/impressionistwomen300.jpg" alt="Impressionist Women">
                             </a>
                             <h4>Painting</h4>
                             <p>Impressionist Women</p>
@@ -254,7 +254,7 @@
                     <li data-id="p-18" data-type="sketches" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/jennifer_lawrance500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/jennifer_lawrance.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/jennifer_lawrance.jpg" alt="Jennifer Lawrance">
                             </a>
                             <h4>Sketch</h4>
                             <p>Jennifer Lawrance</p>
@@ -263,7 +263,7 @@
                     <li data-id="p-19" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/landscape500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/landscape300.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/landscape300.jpg" alt="Landscape">
                             </a>
                             <h4>Painting</h4>
                             <p>Landscape</p>
@@ -272,7 +272,7 @@
                     <li data-id="p-20" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/tree_swallow500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/tree_swallow.jpg" alt="">
+                                <img src="assets/img/portfolio/thumbs/tree_swallow.jpg" alt="Tree Swallow">
                             </a>
                             <h4>Painting</h4>
                             <p>Tree Swallow</p>
@@ -295,7 +295,6 @@
                         <h4>Contact Singh</h4>
                         <p><i class="icon-map-marker"></i> Los Angeles, California, US</p>
                         <p><i class="icon-envelope-alt"></i>Email: <a href="mailto:singh.enso@gmail.com">singh.enso@gmail.com</a></p>
-                        <p><i class="icon-camera-retro"></i> Instagram: <a href="http://instagram.com/singh_gallery">instagram.com/singh_gallery</a></p>
                     </div>
                 </div>
                 <div class="footer-border"></div>
@@ -305,6 +304,7 @@
                     </div>
                     <div class="social span8">
                         <a class="facebook" href="https://www.facebook.com/singh.enso"></a>
+                        <a class="instagram" href="http://instagram.com/singh_gallery"></a>
                     </div>
                 </div>
             </div>
