--- a/about.html
+++ b/about.html
@@ -105,7 +105,6 @@
                         <h4>Contact Singh</h4>
                         <p><i class="icon-map-marker"></i> Los Angeles, California, US</p>
                         <p><i class="icon-envelope-alt"></i>Email: <a href="mailto:singh.enso@gmail.com">singh.enso@gmail.com</a></p>
-                        <p><i class="icon-camera-retro"></i> Instagram: <a href="http://instagram.com/singh_gallery">instagram.com/singh_gallery</a></p>
                     </div>
                 </div>
                 <div class="footer-border"></div>
@@ -115,6 +114,7 @@
                     </div>
                     <div class="social span8">
                         <a class="facebook" href="https://www.facebook.com/singh.enso"></a>
+                        <a class="instagram" href="http://instagram.com/singh_gallery"></a>
                     </div>
                 </div>
             </div>
