--- a/portfolio.html
+++ b/portfolio.html
@@ -103,8 +103,8 @@
                             <a href="assets/img/portfolio/full_size/nude_figure_study_oil_on_paper.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/nude_figure_study_oil_on_paper300.png" alt="Figure Study">
                             </a>
-                            <h4>Oil on paper</h4>
-                            <p>Figure Study</p>
+                            <h4>Figure Study</h4>
+                            <p>Oil on paper</p>
                         </div>
                     </li>
                     <li data-id="p-female-portrait" data-type="oil" class="span3">
@@ -112,8 +112,8 @@
                             <a href="assets/img/portfolio/full_size/dark-hair-555.jpg" rel="prettyPhoto" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/dark-hair-300.jpg" rel="prettyPhoto" alt="Female Portrait">
                             </a>
-                            <h4>Oil on panel</h4>
-                            <p>Female Portrait</p>
+                            <h4>Female Portrait</h4>
+                            <p>Oil on panel</p>
                         </div>
                     </li>
                     <li data-id="p-3" data-type="drawing" class="span3">
@@ -121,8 +121,8 @@
                             <a href="assets/img/portfolio/full_size/female_head500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/female_head300.jpg" alt="Plaster Study Female Head">
                             </a>
-                            <h4>Graphite on Paper</h4>
-                            <p>Plaster Study Female Head</p>
+                            <h4>Plaster Study Female Head</h4>
+                            <p>Graphite</p>
                         </div>
                     </li>
                     <li data-id="p-4" data-type="drawing" class="span3">
@@ -130,8 +130,8 @@
                             <a href="assets/img/portfolio/full_size/medusa_study_500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/medusa_study_300.jpg" alt="Medusa Study">
                             </a>
-                            <h4>Graphite on Paper</h4>
-                            <p>Medusa Study</p>
+                            <h4>Medusa Study</h4>
+                            <p>Graphite</p>
                         </div>
                     </li>
                     <li data-id="p-5" data-type="drawing" class="span3">
@@ -139,8 +139,8 @@
                             <a href="assets/img/portfolio/full_size/with_a_wimper.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/with_a_wimper_300.jpg" alt="With a Wimper">
                             </a>
-                            <h4>Graphite on Paper</h4>
-                            <p>With a Wimper</p>
+                            <h4>With a Wimper</h4>
+                            <p>Graphite</p>
                         </div>
                     </li>
                     <li data-id="p-6" data-type="drawing" class="span3">
@@ -148,8 +148,8 @@
                             <a href="assets/img/portfolio/full_size/grandfather500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/grandfather.jpg" alt="Artist's GrandFather">
                             </a>
-                            <h4>Charcoal on Paper</h4>
-                            <p>Artist's GrandFather</p>
+                            <h4>Artist's GrandFather</h4>
+                            <p>Charcoal</p>
                         </div>
                     </li>
                     <li data-id="p-7" data-type="drawing" class="span3">
@@ -157,8 +157,8 @@
                             <a href="assets/img/portfolio/full_size/male_head400.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/male_head.jpg" alt="Plaster Study Male Head">
                             </a>
-                            <h4>Graphite on Paper</h4>
-                            <p>Plaster Study Male Head</p>
+                            <h4>Plaster Study Male Head</h4>
+                            <p>Graphite</p>
                         </div>
                     </li>
                     <li data-id="p-8" data-type="drawing" class="span3">
@@ -166,8 +166,8 @@
                             <a href="assets/img/portfolio/full_size/torso450.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/torso300.jpg" alt="Plaster Study Torso">
                             </a>
-                            <h4>Graphite on Paper</h4>
-                            <p>Plaster Study Torso</p>
+                            <h4>Plaster Study Torso</h4>
+                            <p>Graphite</p>
                         </div>
                     </li>
                     <li data-id="p-9" data-type="oil" class="span3">
@@ -175,17 +175,17 @@
                             <a href="assets/img/portfolio/full_size/classmate_study500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/classmate_study.jpg" alt="Classmate Study">
                             </a>
-                            <h4>Oil on Paper</h4>
-                            <p>Classmate Study</p>
+                            <h4>Classmate Study</h4>
+                            <p>Oil on Paper</p>
                         </div>
                     </li>
-                    <li data-id="p-10" data-type="sketches" class="span3">
+                    <li data-id="p-10" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/bobmarley500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/bobmarley300.jpg" alt="Bob Marley">
                             </a>
-                            <h4>Sketch</h4>
-                            <p>Bob Marley</p>
+                            <h4>Bob Marley</h4>
+                            <p>Watercolor</p>
                         </div>
                     </li>
                     <li data-id="p-11" data-type="sketches" class="span3">
@@ -193,8 +193,8 @@
                             <a href="assets/img/portfolio/full_size/budda550.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/budda300.jpg" alt="Budda">
                             </a>
-                            <h4>Sketch</h4>
-                            <p>Budda</p>
+                            <h4>Buddah</h4>
+                            <p>Sketc</p>
                         </div>
                     </li>
                     <li data-id="p-12" data-type="watercolor" class="span3">
@@ -202,80 +202,53 @@
                             <a href="assets/img/portfolio/full_size/butterfly.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/butterfly300.jpg" alt="Butterfly">
                             </a>
-                            <h4>Painting</h4>
-                            <p>Butterfly</p>
+                            <h4>Butterfly</h4>
+                            <p>WaterColor</p>
                         </div>
                     </li>
-                    <li data-id="p-13" data-type="oil" class="span3">
-                        <div class="work">
-                            <a href="assets/img/portfolio/full_size/comission470.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/commision300.jpg" alt="Commissioned work">
-                            </a>
-                            <h4>Painting</h4>
-                            <p>Commissioned Work</p>
-                        </div>
-                    </li>
-                    <li data-id="p-14" data-type="oil" class="span3">
+                    <li data-id="p-15" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/bleedingheart.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/bleedingheart-300.jpg" alt="Bleeding Hearth">
                             </a>
-                            <h4>Painting</h4>
-                            <p>Bleeding Hearth</p>
+                            <h4>Bleeding Hearth</h4>
+                            <p>Oil on Canvas</p>
                         </div>
                     </li>
-                    <li data-id="p-15" data-type="sketches" class="span3">
+                    <li data-id="p-16" data-type="sketches" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/hamsa500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/hamsa300.jpg" alt="Hamsa">
                             </a>
-                            <h4>Sketch</h4>
-                            <p>Hamsa</p>
-                        </div>
-                    </li>
-                    <li data-id="p-16" data-type="watercolor" class="span3">
-                        <div class="work">
-                            <a href="assets/img/portfolio/full_size/hummingbird500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/hummingbird300.jpg" alt="Humming Bird">
-                            </a>
-                            <h4>Painting</h4>
-                            <p>Humming Bird</p>
+                            <h4>Hamsa</h4>
+                            <p>Sketch</p>
                         </div>
                     </li>
                     <li data-id="p-17" data-type="watercolor" class="span3">
                         <div class="work">
+                            <a href="assets/img/portfolio/full_size/hummingbird500.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/thumbs/hummingbird300.jpg" alt="Humming Bird">
+                            </a>
+                            <h4>Humming Bird</h4>
+                            <p>Watercolor</p>
+                        </div>
+                    </li>
+                    <li data-id="p-18" data-type="watercolor" class="span3">
+                        <div class="work">
                             <a href="assets/img/portfolio/full_size/impressionistwomen800.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/impressionistwomen300.jpg" alt="Impressionist Women">
                             </a>
-                            <h4>Painting</h4>
-                            <p>Impressionist Women</p>
+                            <h4>Impressionist Women</h4>
+                            <p>Watercolor</p>
                         </div>
                     </li>
-                    <li data-id="p-18" data-type="sketches" class="span3">
-                        <div class="work">
-                            <a href="assets/img/portfolio/full_size/jennifer_lawrance500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/jennifer_lawrance.jpg" alt="Jennifer Lawrance">
-                            </a>
-                            <h4>Sketch</h4>
-                            <p>Jennifer Lawrance</p>
-                        </div>
-                    </li>
-                    <li data-id="p-19" data-type="oil" class="span3">
-                        <div class="work">
-                            <a href="assets/img/portfolio/full_size/landscape500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/landscape300.jpg" alt="Landscape">
-                            </a>
-                            <h4>Painting</h4>
-                            <p>Landscape</p>
-                        </div>
-                    </li>
-                    <li data-id="p-20" data-type="watercolor" class="span3">
+                    <li data-id="p-19" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/tree_swallow500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/tree_swallow.jpg" alt="Tree Swallow">
                             </a>
-                            <h4>Painting</h4>
-                            <p>Tree Swallow</p>
+                            <h4>Tree Swallow</h4>
+                            <p>Watercolor</p>
                         </div>
                     </li>
                 </ul>
@@ -325,4 +298,3 @@
     </body>
 
 </html>
-
