--- a/portfolio.html
+++ b/portfolio.html
@@ -194,7 +194,7 @@
                                 <img src="assets/img/portfolio/thumbs/budda300.jpg" alt="Budda">
                             </a>
                             <h4>Buddah</h4>
-                            <p>Sketc</p>
+                            <p>Sketch</p>
                         </div>
                     </li>
                     <li data-id="p-12" data-type="watercolor" class="span3">
@@ -203,7 +203,7 @@
                                 <img src="assets/img/portfolio/thumbs/butterfly300.jpg" alt="Butterfly">
                             </a>
                             <h4>Butterfly</h4>
-                            <p>WaterColor</p>
+                            <p>Watercolor</p>
                         </div>
                     </li>
                     <li data-id="p-15" data-type="oil" class="span3">
