--- a/about.html
+++ b/about.html
@@ -76,8 +76,7 @@
                 <div class="row">
                     <div class="span12">
                         <i class="icon-user page-title-icon"></i>
-                        <h2>About the Artist /</h2>
-                        <p>Below you can find more information about Singh</p>
+                        <h2>About the Artist</h2>
                     </div>
                 </div>
             </div>
@@ -97,9 +96,8 @@
             <div class="container">
                 <div class="row">
                     <div class="widget span9">
-                        <h4>About the artist</h4>
-                        <p>Gagandeep Singh known as “Singh” was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught and is completing his Bachelor of Arts degree at Cal State University Northridge specializing in contemporary figurative painting. He appears to capture the very essence of his subjects quickly with skillful, loose brushwork...   </p>
-                        <p><a href="/about.html">Read more...</a></p>
+                        <!-- <h4>About the artist</h4> -->
+                        <img src="assets/img/singh.png" alt="singh" class="img-thumbnail">
                     </div>
                     <div class="widget span3">
                         <h4>Contact Singh</h4>
@@ -132,4 +130,3 @@
     </body>
 
 </html>
-
