--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                 <div class="row">
                     <div class="widget span9">
                         <!-- <h4>About the artist</h4> -->
-                        <img src="assets/img/singh.png" alt="singh" class="img-thumbnail">
+                        <img src="assets/img/singh.png" alt="singh" class="img-rounded">
                     </div>
                     <div class="widget span3">
                         <h4>Contact Singh</h4>
